--- a/public/index.html
+++ b/public/index.html
@@ -597,7 +597,7 @@ for (i = 0; i < x.length; i++) {
         'Accept': 'application/json',
         'Content-Type': 'application/json'
       },
-      body: JSON.stringify({phone: "9958082241", price: 1200, redirectUrl: "https://shop.letsdooit.com/"})
+      body: JSON.stringify({phone: "9958082241", price: 1200, redirectUrl: "https://shop.letsdooit.in/"})
     })
     let response = await rawResponse.json();
     console.log('response :>> ', response);
